--- a/1-drum-kit/index.html
+++ b/1-drum-kit/index.html
@@ -57,7 +57,7 @@
         <audio data-key="76" src="sounds/tink.wav"></audio>
 
         <script>
-            window.addEventListener('keydown', e => {
+            function playSound(e) {
                 const audio = document.querySelector(
                     `audio[data-key="${e.keyCode}"]`
                 );
@@ -70,7 +70,20 @@
                 // quickly pressing the same button over and over again
                 audio.currentTime = 0;
                 audio.play();
-            });
+                key.classList.add('playing');
+            }
+            function removeTransition(e) {
+                // skip if it's not a transform
+                if (e.propertyName !== 'transform') return;
+                this.classList.remove('playing');
+            }
+
+            const keys = document.querySelectorAll('.key');
+            keys.forEach(key =>
+                key.addEventListener('transitionend', removeTransition)
+            );
+
+            window.addEventListener('keydown', playSound);
         </script>
     </body>
 </html>
